Adding swagger scripts
